# Web-Server

./: README.md
axum-based-server/: Cargo.toml
axum-based-server/src/: main.rs
server/: 404.html  Cargo.toml  get_method.html
server/src/: lib.rs  main.rs
web-apps/: 404.html  style_404.css  style_welcome.css  upload_program.html  welcome.html
